Prompt update, game loop fix.

--- a/Assets/Resources/Prompts/1. Scenario Generation.md
+++ b/Assets/Resources/Prompts/1. Scenario Generation.md
@@ -24,6 +24,8 @@ Each episode begins with **a starting scenario or crisis** that immediately **se
 
 {0}
 
+**(Use world context to maintain continuity with *polbots*.)**
+
 ### **Input 2: Character List**
 
 Here’s a complete list of characters and their pronouns for continuity:  
@@ -32,9 +34,11 @@ Here’s a complete list of characters and their pronouns for continuity:
 
 **(Only use exact names from this list. Do not denote ranks or roles; the system already knows who's a moderator.)**
 
-### **Input 3: Episode Idea**
+### **Input 3: Writer's Note**
 
 {2}
+
+**(Use the writer's note as a basis for this episode of *polbots*.)**
 
 ---
 
