--- a/Assets/Resources/Prompts/2. Behavior Generation.md
+++ b/Assets/Resources/Prompts/2. Behavior Generation.md
@@ -12,11 +12,11 @@ Your job is to **write a 120-150 word response** capturing their:
 
 ---
 
-### **Input 1: Episode Context**
+### **Input 1: Scenario Context**
 
 {0}
 
-### **Input 2: Scenario Setup**
+### **Input 2: Writer's Note**
 
 {1}
 
