--- a/Assets/Resources/Prompts/3. Editor Process.md
+++ b/Assets/Resources/Prompts/3. Editor Process.md
@@ -15,9 +15,13 @@ This step ensures **the conversation flows naturally,** builds toward an engagin
 
 {0}
 
-### **Input 2: Character Behaviors**
+### **Input 2: Writer's Note**
 
 {1}
+
+### **Input 3: Character Behaviors**
+
+{2}
 
 ---
 
