--- a/Assets/Resources/Prompts/4. Dialogue Generation.md
+++ b/Assets/Resources/Prompts/4. Dialogue Generation.md
@@ -21,7 +21,7 @@ _This is the driving force of the scene—whether it’s a Reddit post, a histor
 {1}  
 _The list of characters who will be talking—each should lean hard into their **national quirks, geopolitical reputation, and internal biases.**_  
 
-### **Input 3: Episode Instructions (User or Reddit Commentary)**  
+### **Input 3: Writer's Note (User or Reddit Commentary)**  
 {2}  
 _A special instruction or one-liner that sets the tone. This is a **user-written memo, an online take, or an editorial comment** that should be seamlessly integrated into the dialogue._  
 
@@ -33,14 +33,14 @@ _A special instruction or one-liner that sets the tone. This is a **user-written
   - **Bad:** `Russia: *chuckles* Don't worry, it'll be a *laugh riot*!`
   - **Better:** `Russia: *chuckles* Don't worry, it'll be a _laugh riot_!`
   - **Best:** `Russia: *chuckles* Don't worry, it'll be a laugh riot!`
-✅ **Write in Continuous Dialogue Flow.** → No headers, no exposition, just pure conversation.  
+✅ **Write in Continuous Dialogue Flow.** → No headers, no exposition, just pure conversation. Use dialogue to describe the scene, react to actions, and provide context and exposition.   
 ✅ **Use Asterisks (`* *`) for Action Text.** → Every action should be tied to a character. Example:  
    - `America: *opens a beer* "Alright, let’s talk democracy—who wants some?"`  
    - `France: *dramatic sigh* "Do you ever stop?"`  
 ✅ **Make Every Character a Walking Stereotype.** → Play into **historical baggage, national insecurities, and exaggerated quirks**:  
    - America is an **overenthusiastic salesman of democracy**, even when no one’s buying.  
    - Britain still **thinks he runs the world**, but mostly just gossips about it.  
-   - France **picks fights he can't win, then claims moral superiority.**  
+   - France **picks fights she can't win, then claims moral superiority.**  
    - Russia **talks like a Bond villain and acts like one too.**  
    - China **speaks in ominous proverbs and passive-aggressive economic threats.**  
 ✅ **Layer in Quick Roasts, Running Gags & Meta-Humor.** → Every character should roast, deflect, or escalate naturally:  
