--- a/Assets/Resources/Prompts/6. Episode-to-Episode Continuity.md
+++ b/Assets/Resources/Prompts/6. Episode-to-Episode Continuity.md
@@ -17,7 +17,7 @@ Your job is to **set up the next episode**, ensuring:
 
 {0}
 
-### **Input 2: World Context**
+### **Input 2: Previous Context**
 
 {1}
 
@@ -28,6 +28,7 @@ Your job is to **set up the next episode**, ensuring:
 ✅ **Summarize the Key Events** → What **happened** that might still be relevant?  
 ✅ **Extract Memorable Moments** → What **one-liners or absurd moments** might characters reference later?  
 ✅ **Identify Ongoing Issues** → What **conflicts, grudges, or alliances** might carry over?  
+✅ **Maintain Continuity** → What information from the **previous context** still holds relevance?  
 ✅ **Set Up the Next Episode** → Does it escalate? Shift focus? Introduce a twist?
 
 ---
